0.6/_sources/user-guide/general/exporting_results/examples/plot_exports_output_to_wandb.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/general/exporting_results/examples/plot_exports_output_to_wandb.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_general_exporting_results_examples_plot_exports_output_to_wandb.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_general_exporting_results_examples_plot_exports_output_to_wandb.py:


Export Outputs to Weights & Biases (wandb)
******************************************

In this guide, we will demonstrate how to export the Check's and the Suite's output to wandb.

This enables to view the exported results in wandb and compare the results you
receive with different parameters or model/data.

**Structure:**

* `Load Data <#load-data>`__
* `Run a Check <#run-a-check>`__
* `Export Check to wandb <#export-a-check-s-output-checkresult-to-wandb>`__
* `Export Suite to wandb <#exporting-a-suite-s-output-suiteresult-to-wandb>`__

.. GENERATED FROM PYTHON SOURCE LINES 20-22

Load Data
---------

.. GENERATED FROM PYTHON SOURCE LINES 22-28

.. code-block:: default


    from deepchecks.tabular.datasets.classification import iris

    train_dataset, test_dataset = iris.load_data()
    model = iris.load_fitted_model()








.. GENERATED FROM PYTHON SOURCE LINES 29-31

Run a Check
-----------

.. GENERATED FROM PYTHON SOURCE LINES 31-37

.. code-block:: default


    from deepchecks.tabular.checks import WholeDatasetDrift

    result = WholeDatasetDrift().add_condition_overall_drift_value_not_greater_than(
    ).run(train_dataset, test_dataset, model)








.. GENERATED FROM PYTHON SOURCE LINES 38-40

Observe CheckResult Display and Value
-------------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 40-43

.. code-block:: default


    result






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Whole Dataset Drift</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "31852b0a0b0343dda466d8a9f103b5c8": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html"
            ],
            "children": [
              "IPY_MODEL_69a418301c2749cfbfd6be218505ed3a"
            ],
            "layout": "IPY_MODEL_f7c41b60e0334b91b7c04640c81c6e8c"
          }
        },
        "69a418301c2749cfbfd6be218505ed3a": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_d830096c189540e3a0dfb586f0659503",
            "style": "IPY_MODEL_ce6dfa9ee73641d59cf95275e7ff4f0f",
            "value": "<h4>Whole Dataset Drift</h4><p>    Calculate drift between the entire train and test datasets using a model trained to distinguish between them. <a href=\"https://docs.deepchecks.com/0.6/checks_gallery/tabular/distribution/plot_whole_dataset_drift.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p><h5>Conditions Summary</h5><style type=\"text/css\">\n#T_de9c3 table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_de9c3 thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_de9c3 tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_de9c3 th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_de9c3 td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_de9c3\">\n  <thead>\n    <tr>\n      <th id=\"T_de9c3_level0_col0\" class=\"col_heading level0 col0\" >Status</th>\n      <th id=\"T_de9c3_level0_col1\" class=\"col_heading level0 col1\" >Condition</th>\n      <th id=\"T_de9c3_level0_col2\" class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_de9c3_row0_col0\" class=\"data row0 col0\" ><div style=\"color: green;text-align: center\">\u2713</div></td>\n      <td id=\"T_de9c3_row0_col1\" class=\"data row0 col1\" >Drift value is not greater than 0.25</td>\n      <td id=\"T_de9c3_row0_col2\" class=\"data row0 col2\" ></td>\n    </tr>\n  </tbody>\n</table>\n<h5>Additional Outputs</h5><p><b>&#x2713;</b> Nothing found</p>"
          }
        },
        "d830096c189540e3a0dfb586f0659503": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "ce6dfa9ee73641d59cf95275e7ff4f0f": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "f7c41b60e0334b91b7c04640c81c6e8c": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "31852b0a0b0343dda466d8a9f103b5c8"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 44-45

the value can be observed

.. GENERATED FROM PYTHON SOURCE LINES 45-47

.. code-block:: default

    result.value





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'domain_classifier_auc': 0.4545454545454546, 'domain_classifier_drift_score': 0, 'domain_classifier_feature_importance': {'petal length (cm)': 1.0, 'sepal length (cm)': 0.0, 'sepal width (cm)': 0.0, 'petal width (cm)': 0.0}}



.. GENERATED FROM PYTHON SOURCE LINES 48-62

Export a Check's Output (CheckResult) to wandb
==============================================
Exporting the output to wandb is possible using the ``to_wandb`` function. This function
exports the check outputs to a wandb project.

The output display that will be export will be a bit different from what you usually
see. Only the tables and the plots are being exported.

On default if you export a single check to wandb without a wandb run active it will
create a project with the name deepchecks and the and the check's metadata in the
config and export the results there.

See Check to_wandb options
--------------------------

.. GENERATED FROM PYTHON SOURCE LINES 62-67

.. code-block:: default


    from deepchecks.core import CheckResult

    help(CheckResult.to_wandb)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Help on function to_wandb in module deepchecks.core.check_result:

    to_wandb(self, dedicated_run: bool = True, **kwargs: Any)
        Export check result to wandb.
    
        Parameters
        ----------
        dedicated_run : bool , default: None
            If to initiate and finish a new wandb run.
            If None it will be dedicated if wandb.run is None.
        kwargs: Keyword arguments to pass to wandb.init.
                Default project name is deepchecks.
                Default config is the check metadata (params, train/test/ name etc.).





.. GENERATED FROM PYTHON SOURCE LINES 68-69

To use this function you first need to login to your wandb account

.. GENERATED FROM PYTHON SOURCE LINES 69-73

.. code-block:: default


    import wandb
    wandb.login()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    False



.. GENERATED FROM PYTHON SOURCE LINES 74-77

.. code-block:: default


    result.to_wandb()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    wandb: Tracking run with wandb version 0.12.15
    wandb: W&B syncing is set to `offline` in this directory.  
    wandb: Run `wandb online` or set WANDB_MODE=online to enable cloud syncing.
    wandb: Waiting for W&B process to finish... (success).
    wandb: - 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb: \ 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb:                                                                                
    wandb: You can sync this run to the cloud by running:
    wandb: wandb sync /home/runner/work/deepchecks/deepchecks/docs/source/user-guide/general/exporting_results/wandb/offline-run-20220428_072849-3bruhcfd
    wandb: Find logs at: ./wandb/offline-run-20220428_072849-3bruhcfd/logs




.. GENERATED FROM PYTHON SOURCE LINES 78-88

Exporting a Suite's Output (SuiteResult) to wandb
=================================================
Run Suite and export to wandb
-----------------------------
Exporting a suite to wandb is the same as exporting a check. The display in wand
will have a section per check.

On default if you export a suite to wandb without a wandb run active it will create
a project with the name deepchecks and the suite's name in the config and send the
results there.

.. GENERATED FROM PYTHON SOURCE LINES 88-93

.. code-block:: default


    from deepchecks.tabular.suites import full_suite

    suite = full_suite()








.. GENERATED FROM PYTHON SOURCE LINES 94-98

.. code-block:: default


    suite_result = suite.run(train_dataset=train_dataset, test_dataset=test_dataset, model=model)
    suite_result.to_wandb()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Full Suite:   0%|                                   | 0/35 [00:00<?, ? Check/s]    Full Suite:   0%|                                   | 0/35 [00:00<?, ? Check/s, Check=Model Info]    Full Suite:   3%|#                                  | 1/35 [00:00<00:00, 34.02 Check/s, Check=Columns Info]    Full Suite:   6%|##                                 | 2/35 [00:00<00:01, 22.26 Check/s, Check=Confusion Matrix Report]    Full Suite:   9%|###                                | 3/35 [00:00<00:02, 13.69 Check/s, Check=Confusion Matrix Report]    Full Suite:   9%|###                                | 3/35 [00:00<00:02, 13.69 Check/s, Check=Performance Report]         Full Suite:  11%|####                               | 4/35 [00:00<00:02, 13.69 Check/s, Check=Roc Report]            Full Suite:  14%|#####                              | 5/35 [00:00<00:04,  7.41 Check/s, Check=Roc Report]    Full Suite:  14%|#####                              | 5/35 [00:00<00:04,  7.41 Check/s, Check=Simple Model Comparison]    Full Suite:  17%|######                             | 6/35 [00:00<00:03,  7.58 Check/s, Check=Simple Model Comparison]    Full Suite:  17%|######                             | 6/35 [00:00<00:03,  7.58 Check/s, Check=Model Error Analysis]       Full Suite:  20%|#######                            | 7/35 [00:01<00:04,  5.86 Check/s, Check=Model Error Analysis]    Full Suite:  20%|#######                            | 7/35 [00:01<00:04,  5.86 Check/s, Check=Calibration Score]       Full Suite:  23%|########                           | 8/35 [00:01<00:04,  5.86 Check/s, Check=Regression Systematic Error]    Full Suite:  26%|#########                          | 9/35 [00:01<00:04,  5.86 Check/s, Check=Regression Error Distribution]    Full Suite:  29%|##########                         | 10/35 [00:01<00:04,  5.86 Check/s, Check=Boosting Overfit]                Full Suite:  31%|###########                        | 11/35 [00:01<00:04,  5.86 Check/s, Check=Unused Features]     Full Suite:  34%|############                       | 12/35 [00:01<00:01, 13.79 Check/s, Check=Unused Features]    Full Suite:  34%|############                       | 12/35 [00:01<00:01, 13.79 Check/s, Check=Model Inference Time]    Full Suite:  37%|#############                      | 13/35 [00:01<00:01, 13.79 Check/s, Check=Train Test Feature Drift]    Full Suite:  40%|##############                     | 14/35 [00:01<00:01, 13.79 Check/s, Check=Train Test Label Drift]      Full Suite:  43%|###############                    | 15/35 [00:01<00:01, 12.06 Check/s, Check=Train Test Label Drift]    Full Suite:  43%|###############                    | 15/35 [00:01<00:01, 12.06 Check/s, Check=Whole Dataset Drift]       Full Suite:  46%|################                   | 16/35 [00:01<00:01, 12.06 Check/s, Check=Dominant Frequency Change]    Full Suite:  49%|#################                  | 17/35 [00:01<00:01, 12.99 Check/s, Check=Dominant Frequency Change]    Full Suite:  49%|#################                  | 17/35 [00:01<00:01, 12.99 Check/s, Check=Category Mismatch Train Test]    Full Suite:  51%|##################                 | 18/35 [00:01<00:01, 12.99 Check/s, Check=New Label Train Test]            Full Suite:  54%|###################                | 19/35 [00:01<00:01, 12.99 Check/s, Check=String Mismatch Comparison]    Full Suite:  57%|####################               | 20/35 [00:01<00:01, 12.99 Check/s, Check=Datasets Size Comparison]      Full Suite:  60%|#####################              | 21/35 [00:01<00:01, 12.99 Check/s, Check=Date Train Test Leakage Duplicates]    Full Suite:  63%|######################             | 22/35 [00:01<00:01, 12.99 Check/s, Check=Date Train Test Leakage Overlap]       Full Suite:  66%|#######################            | 23/35 [00:01<00:00, 12.99 Check/s, Check=Single Feature Contribution Train Test]    Full Suite:  69%|########################           | 24/35 [00:01<00:00, 23.20 Check/s, Check=Single Feature Contribution Train Test]    Full Suite:  69%|########################           | 24/35 [00:01<00:00, 23.20 Check/s, Check=Train Test Samples Mix]                    Full Suite:  71%|#########################          | 25/35 [00:01<00:00, 23.20 Check/s, Check=Identifier Leakage]        Full Suite:  74%|##########################         | 26/35 [00:01<00:00, 23.20 Check/s, Check=Index Train Test Leakage]    Full Suite:  77%|###########################        | 27/35 [00:01<00:00, 23.20 Check/s, Check=Is Single Value]             Full Suite:  80%|############################       | 28/35 [00:01<00:00, 23.20 Check/s, Check=Mixed Nulls]        Full Suite:  83%|#############################      | 29/35 [00:01<00:00, 23.20 Check/s, Check=Mixed Data Types]    Full Suite:  86%|##############################     | 30/35 [00:01<00:00, 23.20 Check/s, Check=String Mismatch]     Full Suite:  89%|###############################    | 31/35 [00:01<00:00, 23.20 Check/s, Check=Data Duplicates]    Full Suite:  91%|################################   | 32/35 [00:01<00:00, 23.20 Check/s, Check=String Length Out Of Bounds]    Full Suite:  94%|#################################  | 33/35 [00:01<00:00, 23.20 Check/s, Check=Special Characters]             Full Suite:  97%|################################## | 34/35 [00:01<00:00, 23.20 Check/s, Check=Label Ambiguity]                                                                                                                      wandb: Tracking run with wandb version 0.12.15
    wandb: W&B syncing is set to `offline` in this directory.  
    wandb: Run `wandb online` or set WANDB_MODE=online to enable cloud syncing.
    Full Suite:   0%|                                                   | 0/51 [00:00<?, ? Result/s]    Full Suite:   8%|####                                               | 4/51 [00:00<00:01, 33.38 Result/s]    Full Suite:  16%|########                                           | 8/51 [00:00<00:01, 26.20 Result/s]    Full Suite:  25%|#############                                      | 13/51 [00:00<00:01, 32.99 Result/s]    Full Suite:  37%|###################                                | 19/51 [00:00<00:00, 38.23 Result/s]    Full Suite:  45%|#######################                            | 23/51 [00:00<00:00, 30.46 Result/s]    Full Suite:  53%|###########################                        | 27/51 [00:00<00:00, 29.81 Result/s]    Full Suite:  61%|##############################9                    | 31/51 [00:00<00:00, 30.40 Result/s]    Full Suite:  71%|####################################               | 36/51 [00:01<00:00, 32.44 Result/s]    Full Suite:  78%|########################################           | 40/51 [00:01<00:00, 31.35 Result/s]    Full Suite:  86%|############################################       | 44/51 [00:01<00:00, 30.86 Result/s]    Full Suite:  94%|################################################   | 48/51 [00:01<00:00, 29.36 Result/s]    Full Suite: 100%|###################################################| 51/51 [00:01<00:00, 29.42 Result/s]                                                                                                             wandb: Waiting for W&B process to finish... (success).
    wandb: - 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb: \ 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb:                                                                                
    wandb: You can sync this run to the cloud by running:
    wandb: wandb sync /home/runner/work/deepchecks/deepchecks/docs/source/user-guide/general/exporting_results/wandb/offline-run-20220428_072856-hixx8spc
    wandb: Find logs at: ./wandb/offline-run-20220428_072856-hixx8spc/logs




.. GENERATED FROM PYTHON SOURCE LINES 99-100

You can also set all the kwargs the wandb.init will get:

.. GENERATED FROM PYTHON SOURCE LINES 100-102

.. code-block:: default


    suite_result.to_wandb(project='my-suite-project', config={'suite-name': 'full-suite'})




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    wandb: Tracking run with wandb version 0.12.15
    wandb: W&B syncing is set to `offline` in this directory.  
    wandb: Run `wandb online` or set WANDB_MODE=online to enable cloud syncing.
    Full Suite:   0%|                                                   | 0/51 [00:00<?, ? Result/s]    Full Suite:   8%|####                                               | 4/51 [00:00<00:01, 39.99 Result/s]    Full Suite:  16%|########                                           | 8/51 [00:00<00:01, 30.74 Result/s]    Full Suite:  25%|#############                                      | 13/51 [00:00<00:01, 37.06 Result/s]    Full Suite:  37%|###################                                | 19/51 [00:00<00:00, 41.09 Result/s]    Full Suite:  47%|########################                           | 24/51 [00:00<00:00, 32.18 Result/s]    Full Suite:  55%|############################                       | 28/51 [00:00<00:00, 30.72 Result/s]    Full Suite:  63%|################################                   | 32/51 [00:00<00:00, 31.81 Result/s]    Full Suite:  73%|#####################################              | 37/51 [00:01<00:00, 35.64 Result/s]    Full Suite:  80%|#########################################          | 41/51 [00:01<00:00, 33.12 Result/s]    Full Suite:  88%|#############################################      | 45/51 [00:01<00:00, 31.51 Result/s]    Full Suite:  96%|#################################################  | 49/51 [00:01<00:00, 29.65 Result/s]                                                                                                             wandb: Waiting for W&B process to finish... (success).
    wandb: - 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb: \ 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb:                                                                                
    wandb: You can sync this run to the cloud by running:
    wandb: wandb sync /home/runner/work/deepchecks/deepchecks/docs/source/user-guide/general/exporting_results/wandb/offline-run-20220428_072903-1eh08060
    wandb: Find logs at: ./wandb/offline-run-20220428_072903-1eh08060/logs





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  25.208 seconds)


.. _sphx_glr_download_user-guide_general_exporting_results_examples_plot_exports_output_to_wandb.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_exports_output_to_wandb.py <plot_exports_output_to_wandb.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_exports_output_to_wandb.ipynb <plot_exports_output_to_wandb.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
