0.7/_sources/user-guide/general/exporting_results/examples/plot_exports_output_to_wandb.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/general/exporting_results/examples/plot_exports_output_to_wandb.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_general_exporting_results_examples_plot_exports_output_to_wandb.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_general_exporting_results_examples_plot_exports_output_to_wandb.py:


Weights & Biases (wandb)
************************

In this guide, we will demonstrate how to export the Check's and the Suite's output to wandb.

This enables to view the exported results in wandb and compare the results you
receive with different parameters or model/data.

**Structure:**

* `Load Data <#load-data>`__
* `Run a Check <#run-a-check>`__
* `Export Check to wandb <#export-a-check-s-output-checkresult-to-wandb>`__
* `Export Suite to wandb <#exporting-a-suite-s-output-suiteresult-to-wandb>`__

.. GENERATED FROM PYTHON SOURCE LINES 20-22

Load Data
---------

.. GENERATED FROM PYTHON SOURCE LINES 22-28

.. code-block:: default


    from deepchecks.tabular.datasets.classification import iris

    train_dataset, test_dataset = iris.load_data()
    model = iris.load_fitted_model()








.. GENERATED FROM PYTHON SOURCE LINES 29-31

Run a Check
-----------

.. GENERATED FROM PYTHON SOURCE LINES 31-37

.. code-block:: default


    from deepchecks.tabular.checks import WholeDatasetDrift

    result = WholeDatasetDrift().add_condition_overall_drift_value_not_greater_than(
    ).run(train_dataset, test_dataset, model)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Calculating permutation feature importance. Expected to finish in 1 seconds




.. GENERATED FROM PYTHON SOURCE LINES 38-40

Observe CheckResult Display and Value
-------------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 40-43

.. code-block:: default


    result






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Whole Dataset Drift</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "69a69d7a4bda4c7db3109f67abbdf033": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_d577116eebb64890ba784c2211ee8a53",
              "IPY_MODEL_4334787475164001b8f85065cac712b5",
              "IPY_MODEL_9a30fd691b2e428c8a659cb9fdeb78eb",
              "IPY_MODEL_90621743877a445d8b51008d7d530194"
            ],
            "layout": "IPY_MODEL_51bc0cf764fe4c17b55f3cfa87d90469"
          }
        },
        "d577116eebb64890ba784c2211ee8a53": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_90a116edc94249708ec660e323a24430",
            "style": "IPY_MODEL_5c301ed3135c40c19876cb0657403ba4",
            "value": "<h4><b>Whole Dataset Drift</b></h4>"
          }
        },
        "90a116edc94249708ec660e323a24430": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "5c301ed3135c40c19876cb0657403ba4": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "4334787475164001b8f85065cac712b5": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_e3455dcc78984d84a7106c52658cc1fd",
            "style": "IPY_MODEL_80c2df9a08cd4584a8869712583f5c34",
            "value": "<p>    Calculate drift between the entire train and test datasets using a model trained to distinguish between them.</p>"
          }
        },
        "e3455dcc78984d84a7106c52658cc1fd": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "80c2df9a08cd4584a8869712583f5c34": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "9a30fd691b2e428c8a659cb9fdeb78eb": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_c5575abb97b041b2bf78a7b9afb5d614",
            "style": "IPY_MODEL_9296e842c17441e18608c7a20d4a8b48",
            "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_00542_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_00542_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_00542_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_00542_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_00542_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_00542_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_00542_row0_col0\" class=\"data row0 col0\" ><div style=\"color: green;text-align: center\">\u2713</div></td>\n      <td id=\"T_00542_row0_col1\" class=\"data row0 col1\" >Drift value is not greater than 0.25</td>\n      <td id=\"T_00542_row0_col2\" class=\"data row0 col2\" >Found drift value of: 0, corresponding to a domain classifier AUC of: 0.45</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "c5575abb97b041b2bf78a7b9afb5d614": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "9296e842c17441e18608c7a20d4a8b48": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "90621743877a445d8b51008d7d530194": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_0046b572c57f4a96a934e2489e316eab",
              "IPY_MODEL_905c5b7dce924ea38d5f36d2432461d0"
            ],
            "layout": "IPY_MODEL_b75e96bb39ce48a6881eab872d1c51a4"
          }
        },
        "0046b572c57f4a96a934e2489e316eab": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_f549124cf032415fa6606caac9eda22f",
            "style": "IPY_MODEL_bc89a5b49182475b941eabb102d71ad6",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "f549124cf032415fa6606caac9eda22f": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "bc89a5b49182475b941eabb102d71ad6": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "905c5b7dce924ea38d5f36d2432461d0": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_c399f0b7a5c94b3abab8c382d9a540fd",
            "style": "IPY_MODEL_8bc4a6b1130a4df781d73f31db1a24ee",
            "value": "<p><b>&#x2713;</b>Nothing to display</p>"
          }
        },
        "c399f0b7a5c94b3abab8c382d9a540fd": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "8bc4a6b1130a4df781d73f31db1a24ee": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "b75e96bb39ce48a6881eab872d1c51a4": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "51bc0cf764fe4c17b55f3cfa87d90469": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "69a69d7a4bda4c7db3109f67abbdf033"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 44-45

the value can be observed

.. GENERATED FROM PYTHON SOURCE LINES 45-47

.. code-block:: default

    result.value





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'domain_classifier_auc': 0.4545454545454546, 'domain_classifier_drift_score': 0, 'domain_classifier_feature_importance': {'petal length (cm)': 1.0, 'sepal length (cm)': 0.0, 'sepal width (cm)': 0.0, 'petal width (cm)': 0.0}}



.. GENERATED FROM PYTHON SOURCE LINES 48-62

Export a Check's Output (CheckResult) to wandb
==============================================
Exporting the output to wandb is possible using the ``to_wandb`` function. This function
exports the check outputs to a wandb project.

The output display that will be export will be a bit different from what you usually
see. Only the tables and the plots are being exported.

On default if you export a single check to wandb without a wandb run active it will
create a project with the name deepchecks and the and the check's metadata in the
config and export the results there.

See Check to_wandb options
--------------------------

.. GENERATED FROM PYTHON SOURCE LINES 62-67

.. code-block:: default


    from deepchecks.core import CheckResult

    help(CheckResult.to_wandb)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Help on function to_wandb in module deepchecks.core.check_result:

    to_wandb(self, dedicated_run: Optional[bool] = None, **kwargs: Any)
        Export check result to wandb.
    
        Parameters
        ----------
        dedicated_run : bool, default True
            whether to create a separate wandb run or not
            (deprecated parameter, does not have any effect anymore)
        kwargs: Keyword arguments to pass to wandb.init.
                Default project name is deepchecks.
                Default config is the check metadata (params, train/test/ name etc.).





.. GENERATED FROM PYTHON SOURCE LINES 68-69

To use this function you first need to login to your wandb account

.. GENERATED FROM PYTHON SOURCE LINES 69-74

.. code-block:: default


    import wandb

    wandb.login()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    False



.. GENERATED FROM PYTHON SOURCE LINES 75-78

.. code-block:: default


    result.to_wandb()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    wandb: Tracking run with wandb version 0.12.17
    wandb: W&B syncing is set to `offline` in this directory.  
    wandb: Run `wandb online` or set WANDB_MODE=online to enable cloud syncing.
    wandb: Waiting for W&B process to finish... (success).
    wandb: - 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb: \ 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb:                                                                                
    wandb: You can sync this run to the cloud by running:
    wandb: wandb sync /home/runner/work/deepchecks/deepchecks/docs/source/user-guide/general/exporting_results/wandb/offline-run-20220531_112346-1y0mub6j
    wandb: Find logs at: ./wandb/offline-run-20220531_112346-1y0mub6j/logs




.. GENERATED FROM PYTHON SOURCE LINES 79-89

Exporting a Suite's Output (SuiteResult) to wandb
=================================================
Run Suite and export to wandb
-----------------------------
Exporting a suite to wandb is the same as exporting a check. The display in wand
will have a section per check.

On default if you export a suite to wandb without a wandb run active it will create
a project with the name deepchecks and the suite's name in the config and send the
results there.

.. GENERATED FROM PYTHON SOURCE LINES 89-94

.. code-block:: default


    from deepchecks.tabular.suites import full_suite

    suite = full_suite()








.. GENERATED FROM PYTHON SOURCE LINES 95-99

.. code-block:: default


    suite_result = suite.run(train_dataset=train_dataset, test_dataset=test_dataset, model=model)
    suite_result.to_wandb()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Full Suite:
    |                                    | 0/36 [00:00<?, ? Check/s]    Full Suite:
    |#                                   | 1/36 [00:00<00:12,  2.71 Check/s, Check=Performance Report]    Full Suite:
    |###                                 | 3/36 [00:00<00:04,  6.90 Check/s, Check=Confusion Matrix Report]    Full Suite:
    |####                                | 4/36 [00:01<00:18,  1.71 Check/s, Check=Segment Performance]        Full Suite:
    |######                              | 6/36 [00:02<00:10,  2.88 Check/s, Check=Simple Model Comparison]    Full Suite:
    |#######                             | 7/36 [00:02<00:09,  3.06 Check/s, Check=Model Error Analysis]       Full Suite:
    |############                        | 12/36 [00:02<00:03,  7.82 Check/s, Check=Boosting Overfit]       Full Suite:
    |#######################             | 23/36 [00:02<00:00, 18.80 Check/s, Check=Feature Label Correlation Change]Calculating permutation feature importance. Expected to finish in 1 seconds
    Full Suite:
    |###########################         | 27/36 [00:03<00:00, 15.63 Check/s, Check=Is Single Value]                     Full Suite:
    |####################################| 36/36 [00:03<00:00, 21.60 Check/s, Check=Feature Label Correlation]                                                                                                                          wandb: Tracking run with wandb version 0.12.17
    wandb: W&B syncing is set to `offline` in this directory.  
    wandb: Run `wandb online` or set WANDB_MODE=online to enable cloud syncing.
    wandb: Waiting for W&B process to finish... (success).
    wandb: - 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb: \ 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb:                                                                                
    wandb: You can sync this run to the cloud by running:
    wandb: wandb sync /home/runner/work/deepchecks/deepchecks/docs/source/user-guide/general/exporting_results/wandb/offline-run-20220531_112354-17qexnp9
    wandb: Find logs at: ./wandb/offline-run-20220531_112354-17qexnp9/logs




.. GENERATED FROM PYTHON SOURCE LINES 100-101

You can also set all the kwargs the wandb.init will get:

.. GENERATED FROM PYTHON SOURCE LINES 101-103

.. code-block:: default


    suite_result.to_wandb(project='my-suite-project', config={'suite-name': 'full-suite'})




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    wandb: Tracking run with wandb version 0.12.17
    wandb: W&B syncing is set to `offline` in this directory.  
    wandb: Run `wandb online` or set WANDB_MODE=online to enable cloud syncing.
    wandb: Waiting for W&B process to finish... (success).
    wandb: - 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb: \ 0.000 MB of 0.000 MB uploaded (0.000 MB deduped)    wandb:                                                                                
    wandb: You can sync this run to the cloud by running:
    wandb: wandb sync /home/runner/work/deepchecks/deepchecks/docs/source/user-guide/general/exporting_results/wandb/offline-run-20220531_112401-27mgqxc1
    wandb: Find logs at: ./wandb/offline-run-20220531_112401-27mgqxc1/logs





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  23.556 seconds)


.. _sphx_glr_download_user-guide_general_exporting_results_examples_plot_exports_output_to_wandb.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_exports_output_to_wandb.py <plot_exports_output_to_wandb.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_exports_output_to_wandb.ipynb <plot_exports_output_to_wandb.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
